--- a/user-service/src/main/resources/bootstrap.yml
+++ b/user-service/src/main/resources/bootstrap.yml
@@ -1,5 +1,11 @@
-spring:
-  cloud:
-    config:
-      enabled: true
-      uri: http://localhost:4004
+#spring:
+#  cloud:
+#    config:
+#      enabled: true
+#      uri: http://localhost:4004
+
+spring:  cloud:    config:      discovery:
+        enabled: true        service-id: CONFIG-SERVER
+      failFast: true  
+
+
