created docker compose

--- a/cloud-gateway/src/main/resources/bootstrap.yml
+++ b/cloud-gateway/src/main/resources/bootstrap.yml
@@ -1,13 +1,13 @@
-#spring:
-#  cloud:
-#    config:
-#      enabled: true
-#      uri: http://localhost:4004
-
 spring:
   cloud:
     config:
-      discovery:
-        enabled: true
-        service-id: CONFIG-SERVER
+      enabled: true
+      uri: http://35.212.139.39:4004
+
+#spring:
+#  cloud:
+#    config:
+#      discovery:
+#        enabled: true
+#        service-id: CONFIG-SERVER
       
