--- a/cloud-config-server/Dockerfile
+++ b/cloud-config-server/Dockerfile
@@ -1,3 +1,4 @@
 FROM openjdk:11
 ADD target/*.jar app.jar
-ENTRYPOINT ["java","-jar","app.jar"]
+ENV JAVA_OPTS=''
+ENTRYPOINT [ "sh", "-c", "java $JAVA_OPTS -jar app.jar" ]
