--- a/hystrix-dashboard/Dockerfile
+++ b/hystrix-dashboard/Dockerfile
@@ -1,4 +1,5 @@
 FROM openjdk:11
 ADD target/*.jar app.jar
 EXPOSE 4003
-ENTRYPOINT ["java","-jar","app.jar"]
+ENV JAVA_OPTS=''
+ENTRYPOINT [ "sh", "-c", "java $JAVA_OPTS -jar app.jar" ]
