modified docker compose

--- a/department-service/src/main/resources/application.yml
+++ b/department-service/src/main/resources/application.yml
@@ -4,4 +4,10 @@ server:
 spring:
   application:
     name: DEPARTMENT-SERVICE
-    
+
+eureka:
+  client:
+    register-with-eureka: true
+    fetch-registry: true
+    service-url:
+      defaultZone: ${EUREKA_SERVER:http://35.209.132.12:8761/eureka}
