--- a/hystrix-dashboard/src/main/resources/application.yml
+++ b/hystrix-dashboard/src/main/resources/application.yml
@@ -10,3 +10,9 @@ hystrix:
   dashboard:
     proxy-stream-allow-list: "*"
 
+eureka:
+  client:
+    register-with-eureka: true
+    fetch-registry: true
+    service-url:
+      defaultZone: ${EUREKA_SERVER:http://35.209.132.12:8761/eureka}
